# fuzz

./: .bazelrc  .bazelrc.fuzzer  .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  default.nix  env.sh  go.mod  go.sum  package.bzl  versions.bzl  workspace.bzl
.github/workflows/: main.yml
docker/: Dockerfile  update.sh
fuzzers/gif/: BUILD.bazel  decode_fuzz_test.cc  decode_proto_fuzz_test.cc  update_corpus.sh
fuzzers/gif/corpus/: BUILD.bazel
lib/: lib.bzl  package.bzl  package_deps.bzl
lib/expat/: BUILD.bazel  package.bzl
lib/gcc/: BUILD.bazel  package.bzl
lib/gif/: BUILD.bazel  README.md  decode_fuzz_test.cc  decode_proto_fuzz_test.cc  fuzz.proto  gif_test.cc  package.bzl  update_corpus.sh  utils.cc  utils.h
lib/gif/testdata/: 64x64.gif.h  64x64.textproto
lib/iconv/: BUILD.bazel  package.bzl
lib/lzma/: BUILD.bazel  package.bzl
lib/musl/: BUILD.bazel  package.bzl
lib/ncurses/: BUILD.bazel  package.bzl
lib/protobuf_mutator/: BUILD.bazel  package.bzl
lib/xml/: BUILD.bazel  package.bzl
lib/z/: BUILD.bazel  package.bzl
src/: BUILD.bazel  error.rs  lib.rs
src/gif/: BUILD.bazel  cc.rs  from_proto.cc  from_proto.h  from_proto_test.cc  gif.h  gif.proto  gif_test.cc  mod.rs  span.cc  span.h  test_util.cc  test_util.h  testdata.cc  testdata.h  to_proto.bzl  to_proto.rs
src/gif/testdata/: 64x64.gif.h  BUILD.bazel
tests/: BUILD.bazel  readme_test.sh
tests/consistency/: BUILD.bazel
toolchains/: BUILD.bazel
toolchains/cc/: clang.bzl
toolchains/cmake/: cmake.bzl
toolchains/make/: BUILD.bazel  configure.bzl  make.bzl
tools/: BUILD.bazel  package.bzl  update_deps.sh
tools/archive_symbols/: BUILD.bazel
tools/llvm/: BUILD.bazel  package.bzl
tools/version_info/: BUILD.bazel
tools/version_info/parser/: BUILD.bazel  parser.go
tools/write_me/: BUILD.bazel  write_me.go  write_me.tpl
