load("//toolchains/cc:clang.bzl", "clang_toolchain")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

clang_toolchain(name = "linux_x86_64_clang")

buildifier(name = "buildifier")

# gazelle:prefix github.com/attilaolah/fuzz
gazelle(name = "gazelle")

bzl_library(
    name = "http_archive",
    srcs = ["http_archive.bzl"],
    visibility = [":__subpackages__"],
)

filegroup(
    name = "readme",
    srcs = ["README.md"],
    visibility = ["//tests:__pkg__"],
)

filegroup(
    name = "go_mod",
    srcs = [
        "go.mod",
        "go.sum",
    ],
    visibility = ["//tests:consistency_tests"],
)

exports_files(
    [
        ".github/workflows/main.yml",
        "docker/Dockerfile",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = [
        "//tests:consistency_tests",
        "//tools/llvm:__pkg__",
    ],
)
