load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_cc//cc:defs.bzl", "cc_toolchain_suite")

K8 = "//:linux_x86_64_clang_cc_toolchain"

cc_toolchain_suite(
    name = "toolchains",
    toolchains = {
        "k8": K8,
        "k8|clang": K8,
    },
)

bzl_library(
    name = "utils_bzl",
    srcs = ["utils.bzl"],
)
