load("@rules_fuzzing//fuzzing:cc_defs.bzl", "cc_fuzz_test")

cc_fuzz_test(
    name = "decode_fuzz_test",
    size = "small",
    srcs = ["decode_fuzz_test.cc"],
    corpus = ["//fuzzers/gif/corpus:gif"],
    deps = [
        "//lib/gif",
        "//src/gif:test_util",
    ],
    testonly = 1,
)

cc_fuzz_test(
    name = "decode_proto_fuzz_test",
    size = "small",
    srcs = ["decode_proto_fuzz_test.cc"],
    corpus = ["//fuzzers/gif/corpus:textpb"],
    deps = [
        "//lib/gif",
        "//lib/protobuf_mutator",
        "//src/gif:from_proto",
        "//src/gif:gif_cc_proto",
        "//src/gif:test_util",
    ],
    testonly = 1,
)

sh_binary(
    name = "update_corpus",
    srcs = ["update_corpus.sh"],
)
