load("//lib:lib.bzl", "lib_package")
load("//toolchains:utils.bzl", "no_error")
load("//toolchains/make:configure.bzl", "configure_make_lib", "lib_source")

package(default_visibility = ["//lib:__subpackages__"])

lib_package()

configure_make_lib(
    name = "gomp",
    configure_command = "libgomp/configure",
    configure_options = [
        # keep sorted
        "--disable-multilib",
        "--disable-shared",
        "--enable-static",
    ],
    env = {"CFLAGS": no_error([
        # keep sorted
        "enum-conversion",
        "implicit-function-declaration",
        "incompatible-pointer-types",
        "int-conversion",
        "sign-compare",
        "unknown-attributes",
        "unused-parameter",
    ])},
    lib_source = lib_source("gcc"),
)
