load("//lib:lib.bzl", "lib_package")
load("//toolchains/make:make.bzl", "make_lib")
load("@rules_fuzzing//fuzzing:cc_defs.bzl", "cc_fuzz_test")

package(default_visibility = ["//:__subpackages__"])

lib_package()

make_lib(
    name = "gif",
    env = {"CFLAGS": "-fPIC"},
)

cc_test(
    name = "gif_test",
    size = "small",
    srcs = ["gif_test.cc"],
    data = ["testdata/64x64.gif"],
    deps = [
        ":gif",
        ":testdata",
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_fuzz_test(
    name = "decode_fuzz_test",
    size = "small",
    srcs = ["decode_fuzz_test.cc"],
    corpus = glob(["testdata/*.gif"]),
    deps = [
        ":gif",
        ":utils",
    ],
)

cc_library(
    name = "testdata",
    testonly = 1,
    hdrs = ["testdata/64x64.gif.h"],
)

cc_library(
    name = "utils",
    srcs = ["utils.cc"],
    hdrs = ["utils.h"],
    deps = [":gif"],
)
