load("//lib:lib.bzl", "lib_package")
load("//toolchains/make:configure.bzl", "configure_make_lib")
load(":package.bzl", "STATIC_LIBS")

package(default_visibility = ["//:__subpackages__"])

lib_package()

configure_make_lib(
    name = "ncurses",
    configure_in_place = True,
    configure_options = [
        # keep sorted
        "--disable-shared",
        "--enable-static",
        "--with-termlib",
        "--with-ticlib",
        "--without-dlsym",
    ],
    out_static_libs = STATIC_LIBS,
)
