load("//lib:defs.bzl", "dep_path")
load("//lib:lib.bzl", "lib_package")
load("//toolchains/make:configure.bzl", "configure_make_lib")
load(":package.bzl", "STATIC_LIBS")

package(default_visibility = ["//:__subpackages__"])

lib_package()

configure_make_lib(
    name = "xml",
    configure_options = [
        # keep sorted
        "--disable-shared",
        "--enable-static",
        '--with-iconv="{}"'.format(dep_path("iconv")),
        '--with-zlib="{}"'.format(dep_path("z")),
        "--without-python",
    ],
    out_static_libs = STATIC_LIBS,
    deps = [
        "//lib/iconv",
        "//lib/z",
    ],
)
