load("@rules_rust//bindgen:bindgen.bzl", "rust_bindgen")
load("@rules_rust//proto:proto.bzl", "rust_proto_library")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = [":users"])

filegroup(
    name = "gif",
    srcs = [
        "mod.rs",
        "to_proto.rs",
    ],
)

proto_library(
    name = "gif_proto",
    srcs = ["gif.proto"],
)

cc_proto_library(
    name = "gif_cc_proto",
    deps = [":gif_proto"],
)

rust_proto_library(
    name = "gif_rust_proto",
    deps = [":gif_proto"],
)

cc_library(
    name = "gif_h",
    hdrs = ["gif.h"],
    deps = ["//lib/gif"],
)

rust_bindgen(
    name = "gif_h_rs",
    cc_lib = ":gif_h",
    header = "gif.h",
)

rust_library(
    name = "cc",
    srcs = [
        "cc.rs",
        ":gif_h_rs",
    ],
    deps = ["//lib/gif"],
)

cc_test(
    name = "gif_test",
    size = "small",
    srcs = ["gif_test.cc"],
    data = ["testdata/64x64.gif"],
    deps = [
        ":span",
        ":testdata",
        "//lib/gif",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "from_proto",
    srcs = ["from_proto.cc"],
    hdrs = ["from_proto.h"],
    deps = [
        ":gif_cc_proto",
        "//lib/gif",
    ],
)

cc_test(
    name = "from_proto_test",
    srcs = ["from_proto_test.cc"],
    deps = [
        ":from_proto",
        ":testdata",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "testdata",
    testonly = 1,
    srcs = ["testdata.cc"],
    hdrs = ["testdata.h"],
)

cc_library(
    name = "span",
    srcs = ["span.cc"],
    hdrs = ["span.h"],
    deps = ["//lib/gif"],
)

package_group(
    name = "users",
    packages = [
        "//fuzzers/gif",
        "//src",  # TODO: Resolve this dependency!
    ],
)
