load("//src/gif:to_proto.bzl", "to_proto")

package(default_visibility = [":users"])

filegroup(
    name = "gif",
    srcs = glob(["*.gif"]),
)

to_proto(
    name = "gif_textpb",
    srcs = [":gif"],
    # The gifs in the corpus can be very big, zero out their content.
    # This preserves enough of the structure, and lets the fuzzer experiment.
    args = ["--zeros"],
)

filegroup(
    name = "artifacts",
    srcs = glob(["*.textpb"]),
)

package_group(
    name = "users",
    packages = ["//fuzzers/gif"],
)
