load("//src/gif:to_proto.bzl", "to_proto")

package(default_visibility = [":users"])

filegroup(
    name = "gif",
    srcs = glob(["*.gif"]),
)

to_proto(
    name = "textpb",
    srcs = [":gif"],
)

package_group(
    name = "users",
    packages = [
        "//src/gif",
        "//fuzzers/gif",
    ],
)
